--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,12 @@ dependencies {
     // Navigation Component dependencies
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-core:18.0.3'
+    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    apply plugin: 'com.google.gms.google-services'
 }
